[tool.poetry]
name = "xiudong-selenium"
version = "0.1.0"
description = ""
authors = ["Sakura <1467649772@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "3.141.0"
requests = "2.26.0"
Flask = "2.0.1"
werkzeug = "2.2.2"
pycryptodome = "3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
